--- a/CSS/CSS-文件.css
+++ b/CSS/CSS-文件.css
@@ -39,8 +39,8 @@ table {
 	border-collapse: collapse;
 	width: auto;
 	position:relative;
-	right:80px;
-	top:200px;
+	left:80px;
+	bottom:200px;
 }
 
 td, th {
