--- a/CSS/CSS-文件.css
+++ b/CSS/CSS-文件.css
@@ -1,7 +1,8 @@
 
 h1 {
 	color: #191970;
-	font-size:80px;
+	text-align: center;
+	font-size:9em;
 	background:black;
 	font-family: "Times New Roman", Georgia, Serif;
     	color: white;
