--- a/CSS/CSS-文件.css
+++ b/CSS/CSS-文件.css
@@ -2,8 +2,11 @@
 h1 {
 	color: #191970;
 	text-align: center;
-	font-size:9em;
+	font-size:5em;
 	background:black;
+	border: 2px solid blue;
+	border-radius: 10px;
+	padding:3px;
 	font-family: "Times New Roman", Georgia, Serif;
     	color: white;
   	text-align: center;
@@ -41,6 +44,9 @@ table {
 	width: auto;
 	position:absolute;
 	left:60%;
+	border: 3px solid grey;
+	border-radius: 10px;
+	padding:5px;
 	bottom:200px;
 }
 
