--- a/CSS/CSS-文件.css
+++ b/CSS/CSS-文件.css
@@ -2,11 +2,11 @@
 h1 {
 	color: #191970;
 	text-align: center;
-	font-size:5em;
+	font-size:4.5em;
 	background:black;
 	border: 5px solid blue;
 	border-radius: 10px;
-	padding:3px;
+	padding:1px 1px 1px 1px;
 	font-family: "Times New Roman", Georgia, Serif;
     	color: white;
   	text-align: center;
@@ -40,6 +40,10 @@ body {
 html {
 	font-family: "Comic Sans MS","Times New Roman" ,Serif;
 	color: MidNightBlue;
+}
+
+#table {
+    position: relative;
 }
 
 table {
