--- a/CSS/CSS-文件.css
+++ b/CSS/CSS-文件.css
@@ -1,6 +1,5 @@
 
 h1 {
-	color: #191970;
 	text-align: center;
 	font-size:4.5em;
 	background:black;
@@ -12,6 +11,17 @@ h1 {
   	text-align: center;
 
 }
+
+footer {
+	color: black;
+	text-align: right;
+	font-size:.5em;
+	border: 1px solid blue;
+	border-radius: 15px;
+	padding:0px 3px 0px 3px;
+	font-family: "Times New Roman", Georgia, Serif;
+  	text-align: center;
+
 #list {
 	position: absolute;
 	left:60%;
