--- a/CSS/CSS-文件.css
+++ b/CSS/CSS-文件.css
@@ -14,13 +14,14 @@ h1 {
 
 footer {
 	color: black;
-	text-align: right;
-	font-size:.5em;
+	text-align: middle;
+	font-size:1em;
 	border: 1px solid blue;
 	border-radius: 15px;
 	padding:0px 3px 0px 3px;
 	font-family: "Times New Roman", Georgia, Serif;
   	text-align: center;
+}
 
 #list {
 	position: absolute;
