--- a/CSS/CSS-文件.css
+++ b/CSS/CSS-文件.css
@@ -15,10 +15,10 @@ h1 {
 footer {
 	color: black;
 	text-align: middle;
-	font-size:1em;
+	font-size:.8em;
 	border: 1px solid blue;
 	border-radius: 15px;
-	padding:0px 3px 0px 3px;
+	padding:0px 1px 0px 1px;
 	font-family: "Times New Roman", Georgia, Serif;
   	text-align: center;
 }
