--- a/CSS/CSS-文件.css
+++ b/CSS/CSS-文件.css
@@ -23,6 +23,17 @@ footer {
   	text-align: center;
 }
 
+footer>p {
+	color: black;
+	text-align: middle;
+	font-size:.7em;
+	border: 1px solid blue;
+	border-radius: 15px;
+	padding:0px 1px 0px 1px;
+	font-family: "Times New Roman", Georgia, Serif;
+  	text-align: center;
+}
+
 #list {
 	position: absolute;
 	left:60%;
